Changes to endpoint created full readme when the endpoint is called
