# src/model/Command.ts
@@ -1,4 +1,4 @@
 export interface Command{
     name: string;
-    command: string;
+    execute: string;
 }
