# src/model/User.ts
@@ -1,8 +1,5 @@
 export interface User {
     name : string;
     linkedin: string;
-    github: string;
-    twitter: string;
-    instagram: string;
     email: string;
 }
